[package]
name = "otpee"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MIT or Apache-2.0"

[dependencies]
constant_time_eq = "0.2.2"
digest = "0.10.3"
hmac = { version = "0.12.1", features = ["reset"] }

[features]
default = ["std"]
std = ["digest/std", "hmac/std"]

[dev-dependencies]
sha1 = "0.10.1"
sha2 = "0.10.2"
